# yaque

./: .gitignore  Cargo.toml  changelog.md  license  readme.md
fuzz/: Cargo.toml  readme.md
fuzz/fuzz_targets/: queue_operations.rs
src/: error.rs  header.rs  lib.rs  mutex.rs  queue.rs  recovery.rs  state.rs  sync.rs  version.rs  watcher.rs
src/queue/: iter.rs  mod.rs  receiver.rs  sender.rs
