[package]
name = "yaque"
version = "0.6.3"
authors = ["Pedro Arruda <pedrobittencourt3@protonmail.ch>"]
edition = "2018"
description = "Yaque is yet another disk-backed persistent queue for Rust"
license = "Apache-2.0"
homepage = "https://github.com/tokahuke/yaque"
repository = "https://github.com/tokahuke/yaque"
keywords = ["queue", "persistent", "disk", "data-structures"]
readme = "readme.md"
exclude = ["data"]
resolver = "2"

[features]
default = ["recovery", "log-trace"]
recovery = ["sysinfo"]
log-trace = []  # test only 
log-debug = []  # test only

[dependencies]
notify = "5.0.0-pre.16"
log = "0.4.17"
sysinfo = { version = "0.25.2", default-features = false, optional = true }
futures = "0.3.23"
lazy_static = "1.4.0"
rand = "0.8.5"
semver = "1.0.13"

[dev-dependencies]
rand_xorshift = "0.3.0"
simple_logger = "2.2.0"
ctor = "0.1.23"
futures-timer = "3.0.2"

