[package]
name = "yaque"
version = "0.6.5"
authors = ["Pedro Arruda <pedrobittencourt3@gmail.com>"]
edition = "2021"
description = "Yaque is yet another disk-backed persistent queue for Rust"
license = "Apache-2.0"
homepage = "https://github.com/tokahuke/yaque"
repository = "https://github.com/tokahuke/yaque"
keywords = ["queue", "persistent", "disk", "data-structures"]
readme = "readme.md"
exclude = ["data"]

[features]
default = ["recovery", "log-trace"]
recovery = ["sysinfo"]
log-trace = []  # test only 
log-debug = []  # test only

[dependencies]
notify = "5.1.0"
log = "0.4.17"
sysinfo = { version = "0.28.0", default-features = false, optional = true }
futures = "0.3.26"
lazy_static = "1.4.0"
rand = "0.8.5"
semver = "1.0.16"

[dev-dependencies]
rand_xorshift = "0.3.0"
simple_logger = "4.0.0"
ctor = "0.1.26"
futures-timer = "3.0.2"

